k8s/production/websocket-event-publisher/sp_testnet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-event-publisher-sp-testnet
  namespace: chicmoz-prod
spec:
  selector:
    app: websocket-event-publisher-sp-testnet
  ports:
    - name: websocket
      protocol: TCP
      port: 80
      targetPort: websocket-port
